@@ -708,6 +708,92 @@ name|getParentVersion
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|Map
+name|pomProperties
+init|=
+name|domReader
+operator|.
+name|getPomProperties
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|pomProperties
+operator|.
+name|entrySet
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Map
+operator|.
+name|Entry
+name|prop
+init|=
+operator|(
+name|Map
+operator|.
+name|Entry
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|domReader
+operator|.
+name|setProperty
+argument_list|(
+operator|(
+name|String
+operator|)
+name|prop
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+operator|(
+name|String
+operator|)
+name|prop
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|mdBuilder
+operator|.
+name|addProperty
+argument_list|(
+operator|(
+name|String
+operator|)
+name|prop
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+operator|(
+name|String
+operator|)
+name|prop
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|ModuleDescriptor
 name|parentDescr
 init|=
@@ -1277,92 +1363,6 @@ argument_list|,
 name|version
 argument_list|)
 expr_stmt|;
-name|Map
-name|pomProperties
-init|=
-name|domReader
-operator|.
-name|getPomProperties
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|Iterator
-name|iter
-init|=
-name|pomProperties
-operator|.
-name|entrySet
-argument_list|()
-operator|.
-name|iterator
-argument_list|()
-init|;
-name|iter
-operator|.
-name|hasNext
-argument_list|()
-condition|;
-control|)
-block|{
-name|Map
-operator|.
-name|Entry
-name|prop
-init|=
-operator|(
-name|Map
-operator|.
-name|Entry
-operator|)
-name|iter
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
-name|domReader
-operator|.
-name|setProperty
-argument_list|(
-operator|(
-name|String
-operator|)
-name|prop
-operator|.
-name|getKey
-argument_list|()
-argument_list|,
-operator|(
-name|String
-operator|)
-name|prop
-operator|.
-name|getValue
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|mdBuilder
-operator|.
-name|addProperty
-argument_list|(
-operator|(
-name|String
-operator|)
-name|prop
-operator|.
-name|getKey
-argument_list|()
-argument_list|,
-operator|(
-name|String
-operator|)
-name|prop
-operator|.
-name|getValue
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 if|if
 condition|(
 name|parentDescr
